syntax = "proto3";

package oapi.v1;

import "google/protobuf/descriptor.proto";
import "oapi/v1/parameter.proto";
import "oapi/v1/security.proto";
import "oapi/v1/server.proto";

option go_package = "github.com/technicallyjosh/protoc-gen-openapi/api/oapi/v1;oapiv1";

extend google.protobuf.ServiceOptions {
  ServiceOptions service = 5150;
}

message ServiceOptions {
  // The default host for all methods within the service. This overrides the
  // file definition and can be overridden by a method definition.
  string host = 1 [deprecated = true];

  // This prefix is applied to each method in the service. Can be overridden by
  // a method definition.
  string prefix = 2;

  // This is the default for all methods.
  string content_type = 3;

  // The name of the default response to be sent back by all routes on the
  // service. This can be overridden by a method definition.
  string default_response = 4;

  // Sets the "x-displayName" extension property.
  string x_display_name = 5;

  // Adds the service to "x-tagGroups" extension property. If the group doesn't exist,
  // it is created and the service tag is added to it.
  string x_tag_group = 6;

  // Path parameters for the service.
  repeated Parameter path_parameter = 7;

  // Query parameters for the service.
  repeated Parameter query_parameter = 8;

  // Header parameters for the service.
  repeated Parameter header_parameter = 9;

  // Cookie parameters for the service.
  repeated Parameter cookie_parameter = 10;

  // Security definition for the service.
  repeated Security security = 11;

  // The servers to add to the service. These are used on all routes of the
  // service by default and overrides the file-defined ones.
  repeated Server servers = 12;
}
